get posts by user id
