# src/shared/infra/http/routes/post.routes.ts
@@ -1,6 +1,7 @@
 import { CreatePostController } from "@modules/posts/useCases/createPost/CreatePostController";
 import { ReturnPostController } from "@modules/posts/useCases/returnPosts/ReturnPostController";
 import { ReturnPostByUserController } from "@modules/posts/useCases/returnPostsByUser/ReturnPostByUserController";
+import { ReturnPostByUserIdController } from "@modules/posts/useCases/returnPostsByUserId/ReturnPostByUserIdController";
 import { Router } from "express";
 import { ensureAuthenticated } from "../middlewares/ensureAuthenticated";
 
@@ -9,6 +10,8 @@ export const postRouter = Router();
 const createPostController = new CreatePostController();
 
 const returnPostsByUserController = new ReturnPostByUserController();
+
+const returnPostByUserIdController = new ReturnPostByUserIdController();
 
 const returnPosts = new ReturnPostController();
 
@@ -21,3 +24,9 @@ postRouter.get(
 );
 
 postRouter.get("/", ensureAuthenticated, returnPosts.handle);
+
+postRouter.get(
+  "/:id",
+  ensureAuthenticated,
+  returnPostByUserIdController.handle
+);
